@@ -9,7 +9,8 @@ scan_sequences(motifs, sequences, threshold = 0.001,
   nthreads = 1, motif_pvalue.k = 8, use.gaps = TRUE,
   allow.nonfinite = FALSE, warn.NA = TRUE, calc.pvals = FALSE,
   return.granges = FALSE, no.overlaps = FALSE,
-  no.overlaps.by.strand = FALSE, no.overlaps.strat = "score")
+  no.overlaps.by.strand = FALSE, no.overlaps.strat = "score",
+  respect.strand = FALSE)
 }
 \arguments{
 \item{motifs}{See \code{convert_motifs()} for acceptable motif formats.}
@@ -78,6 +79,11 @@ strand.}
 The former option keeps the highest scoring overlapping hit (and the first
 of these within ties), and the latter simply keeps the first overlapping hit.
 keeps the highest scoring}
+
+\item{respect.strand}{\code{logical(1)} If \code{RC = TRUE} and motifs are DNA/RNA,
+then setting this option to \code{TRUE} will make \code{scan_sequences()} only
+scan the strands of the input sequences as indicated in the motif
+\code{strand} slot.}
 }
 \value{
 \code{DataFrame} with each row representing one hit. If the input
