@@ -44,7 +44,6 @@
 - create_motif(): is there a check for the "type" input?
     + why does create_motif(type="asdf") work?
 - read_*(): allow to set pseudocount
-- warnings in tests
 - make n^k protection in motif_pvalue() optional
 - make sure no errors are possible inside c++ code -- can lead to memory leaks
   since c++/R may not communicate properly about what needs to be freed
@@ -64,8 +63,6 @@
 - weird interaction:
   + mydf %>% dplyr::rename(name = altname, altname = name) %>% to_list()
   + if altname was blank, this causes "0" to be filled in the name slot
-- do I ever respect the strand option in motifs? Should I? If not, maybe make
-  it clear it's purely cosmetic somewhere (also does motif_rc change the strand?)
 - scan_sequences() and large datasets: spends a LOT of time in pre- and
   post-processing... need to optimize this. The actual scanning is quite fast
   even with billions of letters.
@@ -81,4 +78,3 @@
 - add an extranum slot
 - does view_motifs(use.type="ICM") work with KL motifs? (is ylim properly set)
 - pretty sure the allow.nonfinite option is borked in motif_pvalue()
-- be more clear about providing a single k for freqs in create_sequences()
